# couchbase-lite-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: main.yml
chat-demo/: Cargo.toml
chat-demo/src/: main.rs
ci/: build_and_run_tests.py  docker-up-down.py
couchbase-lite/: Cargo.toml
couchbase-lite-core-sys/: Cargo.toml  build.rs  couch_lite_log_retrans.cpp  couch_lite_log_retrans.hpp
couchbase-lite-core-sys/src/: c4_header.rs  c4_header_for_docs.rs  helpers.rs  lib.rs
couchbase-lite/src/: conflict_resolver.rs  database.rs  doc_enumerator.rs  document.rs  error.rs  fl_slice.rs  index.rs  lib.rs  log_reroute.rs  observer.rs  query.rs  repl_transport.rs  replicator.rs  transaction.rs  value.rs
couchbase-lite/src/replicator/: tokio_socket.rs
couchbase-lite/tests/: functional_tests.rs  smoke_tests.rs
couchbase-lite/tests/need_sync_gateway/: mod.rs
examples/chat-demo/: Cargo.toml
examples/chat-demo/src/: main.rs
serde-couchbase/: Cargo.toml
serde-couchbase/src/: enumer.rs  lib.rs
serde-fleece/: Cargo.toml
serde-fleece/src/: de.rs  dict.rs  error.rs  lib.rs  ser.rs
serde-fleece/src/de/: dict.rs  seq.rs
serde-fleece/src/ser/: macros.rs  map.rs
serde-fleece/tests/: functional_tests.rs
