[package]
name = "chat-demo"
version = "0.2.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2021"

[dependencies]
couchbase-lite = { version = "0.6.0", features = ["bundled", "bundled-sqlite"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "io-std", "io-util"] }