[package]
name = "chat-demo"
version = "0.2.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2021"

[features]
default = ["bundled", "use-couchbase-lite-sqlite"]
bundled = ["couchbase-lite/bundled"]
use-couchbase-lite-sqlite = ["couchbase-lite/use-couchbase-lite-sqlite"]

[dependencies]
couchbase-lite = { version = "0.6.0", default-features = false, features = ["use-tokio-websocket", "native-tls"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "io-std", "io-util"] }