[package]
name = "chat-demo"
version = "0.2.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2021"

[features]
default = ["build-cpp", "git-download-cpp", "use-couchbase-lite-sqlite", "use-tokio-websocket"]
build-cpp = ["couchbase-lite/build-cpp"]
git-download-cpp = ["couchbase-lite/git-download-cpp"]
use-couchbase-lite-sqlite = ["couchbase-lite/use-couchbase-lite-sqlite"]
use-couchbase-lite-websocket = ["couchbase-lite/use-couchbase-lite-websocket"]
use-tokio-websocket = ["couchbase-lite/use-tokio-websocket", "couchbase-lite/use-native-tls"]

[dependencies]
couchbase-lite = { version = "0.11.0", default-features = false }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "io-std", "io-util", "time"] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
