[package]
name = "couchbase-lite-core-sys"
version = "0.5.1"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2021"

[features]
default = ["bundled", "use-couchbase-lite-sqlite"]
# use bundled couchbase-lite-core
bundled = ["cmake"]
# use bundled sqlite in bundled couchbase-lite-core
use-couchbase-lite-sqlite = []
with-asan = []
use-couchbase-lite-websocket = []

[build-dependencies]
cmake = { version = "0.1.45", optional = true }
cc = { version = "1.0.53", default-features = false }
# we don't need clap, because of don't use bindgen as executable
bindgen = { version = "0.59.2", default-features = false, features = ["runtime", "which-rustfmt"] }
env_logger = "0.9"