[package]
name = "couchbase-lite-core-sys"
version = "0.10.2"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Native bindings to the couchbase-lite-core library"
documentation = "https://docs.rs/couchbase-lite-core-sys"
repository = "https://github.com/dushistov/couchbase-lite-rust"
readme = "../README.md"
keywords = ["ffi", "couchbase", "couchbase-lite-core", "database"]

[features]
default = ["build", "git-download", "use-couchbase-lite-sqlite"]
# build couchbase-lite-core from source code
build = ["cmake"]
git-download = ["which"]
# use bundled sqlite in bundled couchbase-lite-core
use-couchbase-lite-sqlite = []
with-asan = []
use-couchbase-lite-websocket = []
docs-rs = []

[build-dependencies]
cmake = { version = "0.1.45", optional = true }
cc = { version = "1.0.53", default-features = false }
# we don't need clap, because of don't use bindgen as executable
bindgen = { version = "0.64.0", default-features = false, features = ["runtime"] }
which = { version = "4.2.1", optional = true, default-features = false }
env_logger = { version = "0.9.0", default-features = false }
syn = { version = "1.0.99", default-features = false }
quote = { version = "1.0.21", default-features = false }

[package.metadata.docs.rs]
features = [ "docs-rs" ] # This feature will be enabled during the docs.rs build
