[package]
name = "couchbase-lite"
version = "0.6.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2021"

[features]
default = ["bundled", "use-couchbase-lite-sqlite", "use-tokio-websocket", "native-tls"]
bundled = ["couchbase-lite-core-sys/bundled", "serde-fleece/bundled"]
use-couchbase-lite-sqlite = ["couchbase-lite-core-sys/use-couchbase-lite-sqlite", "serde-fleece/use-couchbase-lite-sqlite"]
with-asan = ["couchbase-lite-core-sys/with-asan", "serde-fleece/with-asan"]
use-tokio-websocket = ["tokio-tungstenite", "tokio", "futures-util"]
native-tls = ["tokio-tungstenite/native-tls"]
use-couchbase-lite-websocket = ["couchbase-lite-core-sys/use-couchbase-lite-websocket"]

[dependencies]
couchbase-lite-core-sys = { version = "0.5.0", default-features = false }
serde-fleece = { version = "0.1.0", default-features = false }
lazy_static = "1.4"
log = "0.4"
tokio = { version = "1.16.1", optional = true, default-features = false, features = ["rt", "sync", "macros", "time"] }
tokio-tungstenite = { version = "0.16.1", optional = true, default-features = false, features = ["connect"] }
futures-util = { version = "0.3", optional = true, default-features = false }
# TODO: remove deps when https://github.com/rust-lang/rust/issues/44930
# was merged
va_list = "0.1"
serde = { version = "1.0", default-features = false, features = ["std"] }
uuid = { version = "0.8", default-features = false, features = ["v4", "serde"] }
bitflags = { version = "1.0", default-features = false }
fallible-streaming-iterator = "0.1.9"

[dev-dependencies]
tempfile = "3.0"
env_logger = "0.9"
serde = { version = "1.0.104", default-features = false, features = ["derive", "std"] }
tokio = { version = "1.16.1", default-features = false, features = ["sync", "rt", "net", "time"] }