[package]
name = "couchbase-lite"
version = "0.15.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Ergonomic wrapper for couchbase-lite-core library"
documentation = "https://docs.rs/couchbase-lite"
repository = "https://github.com/dushistov/couchbase-lite-rust"
readme = "../README.md"
keywords = ["ffi", "couchbase", "couchbase-lite-core", "database"]

[features]
default = ["build-cpp", "git-download-cpp", "use-couchbase-lite-sqlite", "use-tokio-websocket", "use-native-tls"]
build-cpp = ["couchbase-lite-core-sys/build", "serde-fleece/build-cpp"]
git-download-cpp = ["couchbase-lite-core-sys/git-download", "serde-fleece/git-download-cpp"]
use-couchbase-lite-sqlite = ["couchbase-lite-core-sys/use-couchbase-lite-sqlite", "serde-fleece/use-couchbase-lite-sqlite"]
with-asan = ["couchbase-lite-core-sys/with-asan", "serde-fleece/with-asan"]
use-tokio-websocket = ["tokio-tungstenite", "tokio", "futures-util"]
use-native-tls = ["tokio-tungstenite/native-tls"]
use-couchbase-lite-websocket = ["couchbase-lite-core-sys/use-couchbase-lite-websocket"]
docs-rs = ["couchbase-lite-core-sys/docs-rs", "serde-fleece/docs-rs"]

[dependencies]
couchbase-lite-core-sys = { version = "0.9.0", default-features = false }
serde-fleece = { version = "0.5.0", default-features = false }
log = "0.4"
tokio = { version = "1.16.1", optional = true, default-features = false, features = ["rt", "sync", "macros", "time"] }
tokio-tungstenite = { version = "0.17.1", optional = true, default-features = false, features = ["connect"] }
futures-util = { version = "0.3", optional = true, default-features = false }
# TODO: remove deps when https://github.com/rust-lang/rust/issues/44930
# was merged
va_list = "0.1.4"
serde = { version = "1.0", default-features = false, features = ["std"] }
uuid = { version = "1.1.2", default-features = false, features = ["v4", "serde"] }
bitflags = { version = "1.0", default-features = false }
fallible-streaming-iterator = "0.1.9"
base64 = "0.13.0"

[dev-dependencies]
tempfile = "3.0"
env_logger = { version = "0.9.0", default-features = false }
serde = { version = "1.0.104", default-features = false, features = ["derive", "std"] }
tokio = { version = "1.16.1", default-features = false, features = ["sync", "rt", "rt-multi-thread", "net", "time"] }

[package.metadata.docs.rs]
features = [ "docs-rs" ] # This feature will be enabled during the docs.rs build