[package]
name = "serde-fleece"
version = "0.1.0"
edition = "2021"

[features]
default = ["bundled", "use-couchbase-lite-sqlite"]
bundled = ["couchbase-lite-core-sys/bundled"]
use-couchbase-lite-sqlite = ["couchbase-lite-core-sys/use-couchbase-lite-sqlite"]
with-asan = ["couchbase-lite-core-sys/with-asan"]

[dependencies]
couchbase-lite-core-sys = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false }
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["std", "derive"] }
rustc-hash = "1.0.1"